--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
-langchain_groq
-langchain_openai
-dotenv
-faiss-cpu
+langchain_openai 
+langchain_core
+python-dotenv
+streamlit
+langchain_community
+langserve
+fastapi
+uvicorn
+sse_starlette
+bs4
 pypdf
-langchain
+chromadb
+faiss-cpu
+groq
+cassio
+beautifulsoup4
+langchain-groq
+wikipedia
+arxiv
+langchainhub
